# stock-portfolio-app

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3428b787199d_initial_create_users_and_positions_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: position.py  user.py
backend/app/schemas/: user.py
backend/app/utils/: security.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.js
frontend/src/pages/: homepage.js
